--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,14 +8,13 @@ python-source = "python"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
-name = "ppca"
+name = "ppca_rs"
 crate-type = ["cdylib"]
 
 [dependencies]
 approx = "0.5.1"
 bit-vec = "0.6.3"
 nalgebra = { version = "0.31.2", features = ["serde-serialize"] }
-once_cell = "1.16.0"
 rand = "0.8.5"
 rand_distr = "0.4.3"
 rayon = "1.5.3"
