--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ serde = "1.0.147"
 serde_derive = "1.0.147"
 bincode = "1.3.3"
 ordered-float = "3.4.0"
-polars = "0.25.1"
-polars-lazy = "0.25.1"
-arrow2 = "0.14.2"
-polars-arrow = "0.25.1"
+# polars = "0.25.1"
+# polars-lazy = "0.25.1"
+# arrow2 = "0.14.2"
+# polars-arrow = "0.25.1"
