--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "ppca_rs"
 version = "0.3.1"
 edition = "2021"
+publish = false
 
 [package.metadata.maturin]
 python-source = "python"
@@ -12,20 +13,9 @@ name = "ppca_rs"
 crate-type = ["staticlib"]
 
 [dependencies]
-approx = "0.5.1"
-bit-vec = "0.6.3"
-nalgebra = { version = "0.31.2", features = ["serde-serialize"] }
-rand = "0.8.5"
-rand_distr = "0.4.3"
-rayon = "1.5.3"
+ppca = { path = "./ppca" }
 pyo3 = { version = "0.17.1", features = ["extension-module"] }
 numpy = { git = "https://github.com/PyO3/rust-numpy", features = ["nalgebra"] }
-ndarray = "0.15.6"
-serde = "1.0.147"
-serde_derive = "1.0.147"
 bincode = "1.3.3"
-ordered-float = "3.4.0"
-# polars = "0.25.1"
-# polars-lazy = "0.25.1"
-# arrow2 = "0.14.2"
-# polars-arrow = "0.25.1"
+rayon = "1.6.1"
+nalgebra = "0.31.4"
