keyword too long

--- a/ppca/Cargo.toml
+++ b/ppca/Cargo.toml
@@ -12,7 +12,7 @@ keywords = [
     "data-science",
     "machine-learning",
     "pca",
-    "dimensionality-reduction",
+    "dimension-reduction",
     "missing-values",
 ]
 categories = ["algorithms", "data-structures", "mathematics"]
