--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,5 @@ numpy = { git = "https://github.com/PyO3/rust-numpy", features = ["nalgebra"] }
 bincode = "1.3.3"
 rayon = "1.6.1"
 nalgebra = "0.31.4"
+rand = "0.8.5"
+rand_distr = "0.4.3"
