--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,42 @@
 {
     "git.ignoreLimitWarning": true,
     "cSpell.words": [
-        "uninferred"
+        "bincode",
+        "dataframe",
+        "dmatrix",
+        "dtype",
+        "dvector",
+        "extraplated",
+        "fillna",
+        "getnewargs",
+        "getstate",
+        "groupby",
+        "llks",
+        "logsum",
+        "nalgebra",
+        "ncols",
+        "ndarray",
+        "nrows",
+        "numpy",
+        "optmized",
+        "overfit",
+        "poormans",
+        "posteriori",
+        "powi",
+        "PPCA",
+        "pyarray",
+        "pyclass",
+        "pymethods",
+        "pymodule",
+        "repr",
+        "setstate",
+        "signum",
+        "softmax",
+        "softnorm",
+        "squarey",
+        "staticmethod",
+        "uninferred",
+        "unnorm",
+        "Woodbury"
     ]
 }
