--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ppca_rs"
-version = "0.4.1"
+version = "0.5.0"
 edition = "2021"
 publish = false
 
@@ -14,10 +14,10 @@ crate-type = ["staticlib"]
 
 [dependencies]
 ppca = { path = "./ppca" }
-pyo3 = { version = "0.17.1", features = ["extension-module"] }
-numpy = { git = "https://github.com/PyO3/rust-numpy", features = ["nalgebra"] }
+pyo3 = { version = "0.18.3", features = ["extension-module"] }
+numpy = { version = "0.18.0", features = ["nalgebra"] }
 bincode = "1.3.3"
-rayon = "1.6.1"
-nalgebra = "0.31.4"
+rayon = "1.7.0"
+nalgebra = "0.32.2"
 rand = "0.8.5"
 rand_distr = "0.4.3"
